<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_background"
    android:orientation="vertical"
    tools:context=".HouseKeepingActivity">

    <ImageView
        android:id="@+id/house_keeping_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/camera" />

    <EditText
        android:id="@+id/house_keeping_comment_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/issue_description"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/house_keeping_cleaning_percentage_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="@string/cleaning_percentage"
        android:inputType="textPersonName" />

    <RadioGroup
        android:id="@+id/house_keeping_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/house_keeping_dusting_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/customborder"
                android:layout_marginTop="3dp"
                android:buttonTint="@color/colorWhite"                android:textColor="@color/colorWhite"
                android:text="@string/dusting" />

            <RadioButton
                android:id="@+id/house_keeping_drymop_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/customborder"
                android:layout_marginTop="3dp"
                android:buttonTint="@color/colorWhite"                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                android:text="@string/dry_mop" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/house_keeping_deep_cleaning_radio_button"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:background="@drawable/customborder"
                android:layout_marginTop="3dp"
                android:buttonTint="@color/colorWhite"                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                android:text="@string/deep_cleaning" />

            <RadioButton
                android:id="@+id/house_keeping_wetmop_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/customborder"
                android:layout_marginTop="3dp"
                android:buttonTint="@color/colorWhite"                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                android:text="@string/wet_mop" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/house_keeping_chair_polish_radio_button"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:background="@drawable/customborder"
                android:layout_marginTop="3dp"
                android:buttonTint="@color/colorWhite"                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                android:text="@string/chair_polish" />

            <RadioButton
                android:id="@+id/house_keeping_toilets_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/customborder"
                android:layout_marginTop="3dp"
                android:buttonTint="@color/colorWhite"                android:textColor="@color/colorWhite"
                android:layout_weight="1"
                android:text="@string/toilets" />

        </LinearLayout>
    </RadioGroup>

    <Button
        android:id="@+id/house_keeping_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/customborder1"
        android:text="@string/save"
        android:textColor="@color/colorWhite" />


</LinearLayout>